# NarraVis-UI

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
studious_octo_funicular_ui/: constant.py  constants.py  filters.py  graph.py  narrative_visualiser.py  parser.py  sample_graph_data.py  sidebar.py  subgraph.py
studious_octo_funicular_ui/tabs/: details.py  faces.py  media.py  object.py  summary.py  topic.py
tests/: test_foo.py
utils/: s3.py
