[tool.poetry]
name = "studious_octo_funicular_ui"
version = "0.0.1"
description = "UI for Narrative Analysis"
authors = ["Andrew Tham <fcollaboration@collab.com>"]
repository = "https://github.com/AndrewTham/studious-octo-funicular-ui"
documentation = "https://AndrewTham.github.io/studious-octo-funicular-ui/"
readme = "README.md"
packages = [
  {include = "studious_octo_funicular_ui"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
networkx = "^3.3"
streamlit = "^1.36.0"
st-cytoscape = "^0.0.5"
streamlit-carousel = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
black = "^24.4.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["studious_octo_funicular_ui"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
